Engine: keep HTTP status, fail runs loudly, atomic image writes, clearer logs
- Non-2xx image fetches throw HttpStatusException, and results carry the
  status into retrieval records; failures are filed by kind instead of all
  COMIC_UNAVAILABLE
- A failed daily download run now fails the batch step instead of finishing
  COMPLETED; backfill errors are counted as failures instead of vanishing as
  filtered items; updateComic/updateAllComics return false on failure
- Strip and avatar files are written atomically
- Indexed latest-strip downloads handle 429 like the other paths
- Download pool threads keep the batch MDC, and every comic carries
  comic/date MDC keys
- Exceptions are passed to the logger, expected failures log one line, and
  hot-path INFO lines move to DEBUG
- Java 25 idioms: pattern and record-pattern switches, unnamed variables